Bootstrap Grid System Part 1

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </head>
 
     <body>
-        <header>
-            <div>
-                <div>
-                    <div>
+        <header class="jumbotron">
+            <div container>
+                <div class="row">
+                    <div class="col-12 col-sm-6">
                         <h1>Ristorante con Fusion</h1>
                         <p>
                             We take inspiration from the World's best cuisines,
@@ -30,17 +30,17 @@
                             senses!
                         </p>
                     </div>
-                    <div></div>
+                    <div class="col-12 col-sm"></div>
                 </div>
             </div>
         </header>
 
-        <div>
-            <div>
-                <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-4 order-sm-last col-md-3">
                     <h3>Our Lipsmacking Culinary Creations</h3>
                 </div>
-                <div>
+                <div class="col col-sm order-sm-first col-md">
                     <h2>Uthappizza</h2>
                     <p>
                         A unique combination of Indian Uthappam (pancake) and
@@ -51,11 +51,11 @@
                 </div>
             </div>
 
-            <div>
-                <div>
+            <div class="row">
+                <div class="col-12 col-sm-4 col-md-3">
                     <h3>This Month's Promotions</h3>
                 </div>
-                <div>
+                <div class="col col-sm col-md">
                     <h2>Weekend Grand Buffet</h2>
                     <p>
                         Featuring mouthwatering combinations with a choice of
@@ -66,11 +66,11 @@
                 </div>
             </div>
 
-            <div>
-                <div>
+            <div class="row">
+                <div class="col-12 col-sm-4 order-sm-last col-md-3">
                     <h3>Meet our Culinary Specialists</h3>
                 </div>
-                <div>
+                <div class="col col-sm order-sm-first col-md">
                     <h2>Alberto Somayya</h2>
                     <h4>Executive Chef</h4>
                     <p>
@@ -84,9 +84,9 @@
         </div>
 
         <footer>
-            <div>
-                <div>
-                    <div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 offset-1 col-sm-2">
                         <h5>Links</h5>
                         <ul>
                             <li><a href="#">Home</a></li>
@@ -95,7 +95,7 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="col-7 col-sm-5">
                         <h5>Our Address</h5>
                         <address>
                             121, Clear Water Bay Road<br />
@@ -109,7 +109,7 @@
                             >
                         </address>
                     </div>
-                    <div>
+                    <div class="col-12 col-sm-4">
                         <div>
                             <a href="http://google.com/+">Google+</a>
                             <a href="http://www.facebook.com/profile.php?id="
@@ -122,8 +122,8 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <div>
+                <div class="row">
+                    <div class="col-auto">
                         <p>© Copyright 2018 Ristorante Con Fusion</p>
                     </div>
                 </div>
