--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand mr-auto" href="./index.html">
-                    Ristorante Con Fusion
+                    <img
+                        src="img/logo.png"
+                        alt="Ristorante Con Fusion"
+                        height="30"
+                        width="41"
+                    />
                 </a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav mr-auto">
@@ -79,7 +84,9 @@
                             senses!
                         </p>
                     </div>
-                    <div class="col-12 col-sm"></div>
+                    <div class="col-12 col-sm align-self-center">
+                        <img src="img/logo.png" alt="logo" class="img-fluid" />
+                    </div>
                 </div>
             </div>
         </header>
