--- a/contactus.html
+++ b/contactus.html
@@ -37,7 +37,14 @@
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                <a class="navbar-brand mr-auto" href="./index.html">
+                    <img
+                        src="img/logo.png"
+                        alt="Ristorante Con Fusion"
+                        height="30"
+                        width="41"
+                    />
+                </a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
@@ -78,7 +85,9 @@
                             senses!
                         </p>
                     </div>
-                    <div class="col-12 col-sm"></div>
+                    <div class="col-12 col-sm align-self-center">
+                        <img src="img/logo.png" alt="logo" class="img-fluid" />
+                    </div>
                 </div>
             </div>
         </header>
