--- a/index.html
+++ b/index.html
@@ -84,8 +84,17 @@
                             senses!
                         </p>
                     </div>
-                    <div class="col-12 col-sm align-self-center">
+                    <div class="col-12 col-sm-3 align-self-center">
                         <img src="img/logo.png" alt="logo" class="img-fluid" />
+                    </div>
+                    <div class="col-12 col-sm-2 align-self-center">
+                        <a
+                            class="btn btn-warning btn-block btn-sm"
+                            href="#reserve-form"
+                            role="button"
+                        >
+                            Reserve Table
+                        </a>
                     </div>
                 </div>
             </div>
@@ -128,13 +137,26 @@
                     <h3>This Month's Promotions</h3>
                 </div>
                 <div class="col col-sm col-md">
-                    <h2>Weekend Grand Buffet</h2>
-                    <p class="d-none d-sm-block">
-                        Featuring mouthwatering combinations with a choice of
-                        five different salads, six enticing appetizers, six main
-                        entrees and five choicest desserts. Free flowing bubbly
-                        and soft drinks. All for just $19.99 per person
-                    </p>
+                    <div class="media">
+                        <div class="media-body">
+                            <h2>
+                                Weekend Grand Buffet
+                                <span class="badge badge-danger">NEW</span>
+                            </h2>
+                            <p class="d-none d-sm-block">
+                                Featuring mouthwatering combinations with a
+                                choice of five different salads, six enticing
+                                appetizers, six main entrees and five choicest
+                                desserts. Free flowing bubbly and soft drinks.
+                                All for just $19.99 per person
+                            </p>
+                        </div>
+                        <img
+                            src="img/buffet.png"
+                            alt="Grand Buffet"
+                            class="d-flex mr-3 img-thumbnail align-self-center"
+                        />
+                    </div>
                 </div>
             </div>
 
@@ -159,6 +181,149 @@
                                 specializes in creating mouthwatering
                                 Indo-Italian fusion experiences.
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-content align-items-center">
+                <div class="col-12 col-md-8 offset-md-2" id="reserve-form">
+                    <div class="card">
+                        <h3 class="card-header bg-warning text-white">
+                            Reserve a Table
+                        </h3>
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label
+                                        for="inlineRadioOptions"
+                                        class="col-md-2 col-form-label"
+                                    >
+                                        Number of Guests
+                                    </label>
+                                    <div
+                                        class="form-check form-check-inline pl-3"
+                                    >
+                                        <input
+                                            class="form-check-input"
+                                            type="radio"
+                                            name="inlineRadioOptions"
+                                            id="inlineRadio1"
+                                            value="1"
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="inlineRadio1"
+                                            >1</label
+                                        >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input
+                                            class="form-check-input"
+                                            type="radio"
+                                            name="inlineRadioOptions"
+                                            id="inlineRadio2"
+                                            value="2"
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="inlineRadio2"
+                                            >2</label
+                                        >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input
+                                            class="form-check-input"
+                                            type="radio"
+                                            name="inlineRadioOptions"
+                                            id="inlineRadio3"
+                                            value="3"
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="inlineRadio3"
+                                            >3</label
+                                        >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input
+                                            class="form-check-input"
+                                            type="radio"
+                                            name="inlineRadioOptions"
+                                            id="inlineRadio4"
+                                            value="4"
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="inlineRadio4"
+                                            >4</label
+                                        >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input
+                                            class="form-check-input"
+                                            type="radio"
+                                            name="inlineRadioOptions"
+                                            id="inlineRadio5"
+                                            value="5"
+                                        />
+                                        <label
+                                            pl-5
+                                            pr-5
+                                            class="form-check-label"
+                                            for="inlineRadio5"
+                                            >5</label
+                                        >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input
+                                            class="form-check-input"
+                                            type="radio"
+                                            name="inlineRadioOptions"
+                                            id="inlineRadio6"
+                                            value="6"
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="inlineRadio6"
+                                            >6</label
+                                        >
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label
+                                        for="date-time"
+                                        class="col-md-2 col-form-label"
+                                    >
+                                        Date and Time
+                                    </label>
+                                    <div class="col-md-3">
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            id="date"
+                                            placeholder="Date"
+                                        />
+                                    </div>
+                                    <div class="col-md-3 offset-sm-1">
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            id="time"
+                                            placeholder="Time"
+                                        />
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-2 pl-3">
+                                        <button
+                                            type="submit"
+                                            class="btn btn-primary"
+                                        >
+                                            Reserve
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
