--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-target="#loginModal" data-toggle="modal">
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -55,7 +55,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-dismiss="modal">
+                    <button id="closeButton" type="button" class="close loginModalCloseButton">
                         &times;
                     </button>
                 </div>
@@ -65,29 +65,25 @@
                             <div class="form-group col-sm-4">
                                 <label class="sr-only" for="exampleInputEmail3">Email address</label>
                                 <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
-                                    placeholder="Enter email" />
+                                    placeholder="Enter email">
                             </div>
                             <div class="form-group col-sm-4">
                                 <label class="sr-only" for="exampleInputPassword3">Password</label>
                                 <input type="password" class="form-control form-control-sm mr-1"
-                                    id="exampleInputPassword3" placeholder="Password" />
+                                    id="exampleInputPassword3" placeholder="Password">
                             </div>
                             <div class="col-sm-auto">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" />
-                                    <label class="form-check-label">
-                                        Remember me
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
                                     </label>
                                 </div>
-                                <div class="form-row">
-                                    <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">
-                                        Cancel
-                                    </button>
-                                    <button type="submit" class="btn btn-primary btn-sm ml-1">
-                                        Sign in
-                                    </button>
-                                </div>
                             </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button"
+                                class="btn btn-secondary btn-sm ml-auto loginModalCloseButton">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
                 </div>
@@ -111,21 +107,19 @@
                     <img src="img/logo.png" alt="logo" class="img-fluid" />
                 </div>
                 <div class="col-12 col-sm-2 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-target="#reserveModal"
-                        data-toggle="modal">Reserve Table</a>
+                    <a id="reserveButton" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
 
-    <div class="modal fade" id="reserveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade" id="reserveModal" role=" dialog">
+        <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
                     <h2 class="modal-title">Reserve a Table</h2>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                    <button id="closeButton" type="button" class="close reserveModalCloseButton">
+                        &times;
                     </button>
                 </div>
                 <div class="modal-body">
@@ -195,7 +189,7 @@
                         </div>
                         <div class="form-group row">
                             <div class="offset-md-2 pl-3">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-secondary reserveModalCloseButton">Cancel</button>
                                 <button type="button" class="btn btn-primary">Reserve</button>
                             </div>
                         </div>
@@ -425,6 +419,18 @@
                     $("#carouselButton").children("span").addClass("fa-pause");
                 }
             });
+            $('#loginButton').click(function () {
+                $('#loginModal').modal('show');
+            });
+            $('#reserveButton').click(function () {
+                $('#reserveModal').modal('show');
+            })
+            $('.loginModalCloseButton').click(function () {
+                $('#loginModal').modal('hide');
+            })
+            $('.reserveModalCloseButton').click(function () {
+                $('#reserveModal').modal('hide');
+            })
         });
     </script>
 </body>
